[package]
name = "namada-ibc-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
js-sys = "0.3.70"
web-sys = "0.3.70"
wasm-bindgen = "0.2.93"

namada_sdk = { git = "https://github.com/anoma/namada", tag = "v0.45.1", default-features = false }
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
omit-default-module-path = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
omit-default-module-path = true
